cleaned up poms